# tentaclio-s3

./: CHANGELOG.txt  Makefile  Pipfile  pyproject.toml  setup.py
.circleci/: config.yml
scripts/: verify_version.py
src/tentaclio_s3/: __init__.py
src/tentaclio_s3/clients/: exceptions.py  s3_client.py
tests/: conftest.py
tests/functional/s3/: conftest.py  test_client.py  test_fileformat.py  test_fs.py
tests/unit/clients/: test_s3_client.py
tests/unit/streams/: test_s3_handler.py
